change settings image

--- a/website/index.html
+++ b/website/index.html
@@ -37,7 +37,7 @@
                 <!-- <figcaption>Stats</figcaption> -->
             </figure>
             <figure id="header-right" onclick="onClickNavPage()" class="inactive-page-icon">
-                <img id="settings-image" alt="Options" src="img/settings_100x100.png" />
+                <img id="settings-image" alt="Options" src="img/settings3_100x100.png" />
                 <!-- <figcaption>Options</figcaption> -->
             </figure>
         </header>
