--- a/website/index.html
+++ b/website/index.html
@@ -128,7 +128,7 @@
                     <img id="mic-image" class="hidden" src="img/32px-Font_Awesome_5_solid_microphone-alt.svg.png" />
                     <input type="number" id="solution" name="solution" placeholder="=" onkeyup="guessInput()" onselect="return false;" onfocus="return false;" />
                 </section>
-                <section id="clipboard" onclick="toggleSolution()">
+                <section id="clipboard">
                 </section>
             </div>
         </div>
