--- a/website/index.html
+++ b/website/index.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" type="text/css" href="styles/themes/dark.css" />
     <script src="js/main/main.js"></script>
     <script src="js/main/system.js"></script>
-    <script src="js/conversation/voice.js"></script>
     <script src="js/conversation/sound.js"></script>
     <script src="js/math/math.js"></script>
     <script src="js/page/page.js"></script>
@@ -69,7 +68,7 @@
                                     id="decimalPlaces-button-off" class="b-label-status">OFF</span><br /><span
                                     class="button-sub">(random)</span></button>
                         </li>
-                        <li><button class="option-item" id="voiceMode" title="Use voice recognition instead of keyboard input." onclick="enterFullscreen();toggleVoiceMode()">Dorie listens<span class="hidden b-label-status" id="voice-button-on">ON</span><span id="voice-button-off" class="b-label-status">OFF</span><br /><span
+                        <li><button class="option-item" id="button-voice" title="Use voice appVoice.recognitionObject instead of keyboard input." onclick="enterFullscreen();toggleVoiceMode()">Dorie listens<span class="hidden b-label-status" id="button-voice-on">ON</span><span id="button-voice-off" class="b-label-status">OFF</span><br /><span
                             class="button-sub">(talk to Dorie with your voice)</span></button>
                         </li>
                         <li><button class="option-item" id="soundMode" title="Use audio output for tasks and status feedback." onclick="toggleSoundMode();">Dorie speaks<span class="hidden b-label-status" id="sound-button-on">ON</span><span id="sound-button-off" class="b-label-status">OFF</span><br /><span class="button-sub">(get audio feedback for tasks)</span></button>
@@ -135,8 +134,8 @@
     </div>
     <script src="js/page/page_event.js"></script>
     <script src="js/main/main_events.js"></script>
-    <script src="js/conversation/voice_events.js"></script>
     <script src="js/conversation/sound_events.js"></script>
+    <script src="js/conversation/voice.js"></script>
     <script src="js/conversation/conversation.js"></script>
     <script src="js/math/math_event.js"></script>
     <script src="js/statistics/statistics_event.js"></script>
