fix title attribute

--- a/website/index.html
+++ b/website/index.html
@@ -67,7 +67,7 @@
                                     id="decimalPlaces-button-off" class="b-label-status">OFF</span><br /><span
                                     class="button-sub">(random)</span></button>
                         </li>
-                        <li><button class="option-item" id="button-voice" title="Use voice appVoice.recognitionObject instead of keyboard input." onclick="enterFullscreen();appVoice.toggleVoiceMode()">Dorie listens<span class="hidden b-label-status" id="button-voice-on">ON</span><span id="button-voice-off" class="b-label-status">OFF</span><br /><span
+                        <li><button class="option-item" id="button-voice" title="Use voice recognition instead of keyboard input." onclick="enterFullscreen();appVoice.toggleVoiceMode()">Dorie listens<span class="hidden b-label-status" id="button-voice-on">ON</span><span id="button-voice-off" class="b-label-status">OFF</span><br /><span
                             class="button-sub">(talk to Dorie with your voice)</span></button>
                         </li>
                         <li><button class="option-item" id="soundMode" title="Use audio output for tasks and status feedback." onclick="toggleSoundMode();">Dorie speaks<span class="hidden b-label-status" id="sound-button-on">ON</span><span id="sound-button-off" class="b-label-status">OFF</span><br /><span class="button-sub">(get audio feedback for tasks)</span></button>
