--- a/website/index.html
+++ b/website/index.html
@@ -30,7 +30,7 @@
                 <img id="stats-image" alt="Statistics" src="img/stats_100x100.png" />
             </figure>
             <figure id="header-right" onclick="onClickNavPage()" class="inactive-page-icon">
-                <img id="settings-image" alt="Settings" src="img/settings3_100x100.png" />
+                <img id="settings-image" alt="Settings" src="img/settings_200x200.png" />
             </figure>
         </header>
         <div id="content">
@@ -74,21 +74,32 @@
                         </li>
                         <li>
                             <button class="option-item">
-                                <span class="config-label">New Task After:</span><span class="b-label-status"><input class="config" type="number" id="autoTaskInput" name="autoTaskInput" placeholder="-" value="5" oninput="solution.saveAutoTaskInterval()" /></span><br /><span
-                                class="button-sub">(time to wait in sec.)</span></button>
+                                <span class="config-label">Break Length</span><span class="b-label-status"><select name="auto-task-selector" id="auto-task-selector" class="selector config" dir="rtl" onchange="solution.saveAutoTaskInterval()">
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="5" selected="selected">5</option>
+                                    <option value="10">10</option>
+                                    <option value="15">15</option>
+                                    <option value="20">20</option>
+                                    <option value="25">25</option>
+                                    <option value="30">30</option>
+                                    <option value="∞">∞</option>
+                                </select></span><br /><span
+                                class="button-sub">(between tasks in sec.)</span></button>
                             </button>
                         </li>
                         <li>
                             <button class="option-item">
                                 <span class="config-label">Solution Guide</span><span class="b-label-status"><select name="solution-guide-selector" id="solution-guide-selector" class="selector config" dir="rtl" onchange="solution.saveSolutionGuideInterval()">
                                     <option value="off">OFF</option>
-                                    <option value="10" > 10</option>
-                                    <option value="15" > 15</option>
-                                    <option value="20" selected="selected" > 20</option>
-                                    <option value="30" > 30</option>
-                                    <option value="60" > 60</option>
-                                    <option value="120" >120</option>
-                                    <option value="180" >180</option>
+                                    <option value="5">5</option>
+                                    <option value="10">10</option>
+                                    <option value="15" selected="selected">15</option>
+                                    <option value="20">20</option>
+                                    <option value="30">30</option>
+                                    <option value="60">60</option>
+                                    <option value="120">120</option>
+                                    <option value="180">180</option>
                                 </select></span><br /><span
                                 class="button-sub">(solution after sec.)</span></button>
                             </button>
@@ -149,16 +160,19 @@
         </div>
     </div>
     <script src="js/main/system.js"></script>
-    <script src="js/task/task-view.js"></script>
     <script src="js/page/page_event.js"></script>
+    <script src="js/dev/dev-view.js"></script>
     <script src="js/main/main_events.js"></script>
+    <script src="js/task/task-view.js"></script>
     <script src="js/conversation/sound_events.js"></script>
     <script src="js/conversation/voice.js"></script>
     <script src="js/conversation/conversation.js"></script>
     <script src="js/math/math_event.js"></script>
     <script src="js/statistics/statistics_event.js"></script>
-    <script src="js/dev/dev-view.js"></script>
     <script src="js/task/solution-view.js"></script>
+    <script>
+        newTask();
+    </script>
 </body>
 
 </html>
